fix(style): let pictures fill width on narrower screens

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -318,11 +318,18 @@ main {
     padding: 2em;
 }
 
+picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 picture > img {
     width: auto;
     max-width: 100%;
     height: auto;
     max-height: 100%;
+    flex: 0 1 auto;
 }
 
 .button {
@@ -361,40 +368,36 @@ p > .button {
 }
 
 
-.logo {
-    width: 100%;
-}
-
-.logo > img {
-    max-width: 40%;
+picture.logo {
+    width: 40%;
 }
 
 @media screen and (max-width: 30em) {
-    .logo > img {
+    picture.logo {
         width: 100%;
     }
 }
 
 /* floats for image shortcode */
-.right, .left {
-    max-width: calc(100% / 3);
+picture.right, picture.left {
+    width: calc(100% / 3);
 }
 
-.right {
+picture.right {
     float: right;
     margin-left: 2em;
 }
 
-.left  {
+picture.left  {
     float: left;
     margin-right: 2em;
 }
 /* floats for image shortcode */
 
 @media screen and (max-width: 30em) {
-    .right, .left {
-        margin: 0;
-        max-width: 100%;
+    picture.right, picture.left {
+        margin: 0 auto;
+        width: 100%;
         float: none;
     }
 }
